[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Graphics/Characters/Enemy/ProjectManagerKilled.png" type="Texture" id=1]
[ext_resource path="res://Assets/Graphics/Characters/Enemy/ProjectManager2.png" type="Texture" id=2]
[ext_resource path="res://Assets/Graphics/Characters/Enemy/ProjectManager1.png" type="Texture" id=3]
[ext_resource path="res://Assets/Characters/Enemy/Ghost/Ghost.gd" type="Script" id=5]
[ext_resource path="res://Assets/Audio/Stomp.wav" type="AudioStream" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "Killed",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "Walking",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7.4822, 18.929 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 7.34189, 0.965195 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 9, 17.5132 )

[node name="Ghost" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 35
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Walking"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = -2147483647
position = Vector2( 0, -0.751663 )
shape = SubResource( 2 )

[node name="FloorChecker" type="RayCast2D" parent="."]
enabled = true
exclude_parent = false
cast_to = Vector2( 0, 20 )
collision_mask = 2

[node name="TopCheck" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopCheck"]
position = Vector2( 0, -26.1833 )
shape = SubResource( 3 )

[node name="SideChecker" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="SideChecker"]
position = Vector2( 0, -0.751663 )
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="SoundStomp" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -15.0
[connection signal="body_entered" from="TopCheck" to="." method="_on_TopCheck_body_entered"]
[connection signal="body_entered" from="SideChecker" to="." method="_on_Side_Checker_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
